| Bug #92990 | Alter table crash on partitioned table | ||
|---|---|---|---|
| Submitted: | 29 Oct 2018 15:28 | Modified: | 28 Nov 2018 19:43 |
| Reporter: | Daniel Romero | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Workbench | Severity: | S3 (Non-critical) |
| Version: | 8.0.13 13780177 CE 64bits | OS: | MacOS (10.14 (18A391)) |
| Assigned to: | Milosz Bodzek | CPU Architecture: | x86 |
| Tags: | osx alter table | ||
[29 Oct 2018 15:28]
Daniel Romero
[29 Oct 2018 20:18]
MySQL Verification Team
Thank you for the bug report.
[29 Oct 2018 20:21]
Daniel Romero
tag correction
[28 Nov 2018 18:30]
Omar Mendez Andrade
Posted by developer: FIXED Windows 10x64 MySQL Workbench 8.0.14 MySQL Server 8.0.14 Using the provided query in comments for: CREATE TABLE `vproducts` ( `id` int(11) NOT NULL AUTO_INCREMENT, `ip` varchar(15) COLLATE utf8_spanish2_ci DEFAULT NULL, . . . etc. The alter table can be opened for a table which includes the partitioned table as the query states.
[28 Nov 2018 19:28]
Christine Cole
Posted by developer: Fixed as of the upcoming MySQL Workbench 8.0.14 release, and here's the changelog entry: The alter-table operation when applied to partitioned tables on Windows caused MySQL Workbench to stop working. Thank you for the bug report.
[28 Nov 2018 19:43]
Daniel Romero
hi. both fix reports references windows, but the bug report was about workbench for os x. this will be fixed for os x in version 8.0.14 too?
