fix Bug #92990 Alter table crash on partitioned table